--- a/简易装饰/简易装饰.html
+++ b/简易装饰/简易装饰.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<!-- 注释首页代码 -->
 	<div class="top">
 		<div class="top-a">
 			<a class="top-b" href=""></a>
