--- a/简易装饰/简易装饰.html
+++ b/简易装饰/简易装饰.html
@@ -376,13 +376,31 @@
 	<div class="banner">
 		<div class="banner-a">
 			<span class="banner-b">
-				<p class="banner-b1">关于简设</p>
-                <p class="banner-b2">ABOUT US</p>
+				<p class="banner-b1">新闻资讯</p>
+                <p class="banner-b2">NEWS INFORMATION</p>
 			</span>
 			<span class="banner-b3"></span>
 			<span class="banner-b4"></span>
 			<span class="banner-c"></span>
 			<span class="banner-c1"></span>
+			<ul class="banner-d">
+				<li class="banner-d1 url1">
+					<div class="banner-d12">
+						
+					</div>
+					<!-- <div class="banner-d13"> -->
+						<ul class="banner-d131">
+							<li class="banner-d132 ulr1">
+								<span class=""></span>
+							</li>
+							<li class="banner-d132 ulr2"></li>
+						</ul>
+					<!-- </div> -->
+				</li>
+				<li class="banner-d1 url2">
+					
+				</li>
+			</ul>
 		</div>
 	</div>
 </body>
