--- a/日常/42.立即执行函数.html
+++ b/日常/42.立即执行函数.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>作业13</title>
+    <title>Document</title>
 </head>
 <body>
     <script>
-     
-
+    // 具名函数
+        // 匿名函数表达式
+        // 自执行函数 (立即执行函数)
+        (function () {})();
+        (function () {alert('你好')})()
     </script>
 </body>
 </html>
