--- a/日常/作业12-安全数.html
+++ b/日常/作业12-安全数.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>作业</title>
+    <title>作业-安全数</title>
 </head>
 <body>
     <script>
@@ -19,7 +19,7 @@
       var i;
      
       for(i=1;i<=60;i++){
-           if(i%7==0||i%10==7){
+           if(i%7!==0 && i%10!==7){
                    console.log(i)
            }
       }
