--- a/日常/作业9-警告框.html
+++ b/日常/作业9-警告框.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>js第二天你作业</title>
+    <title>js第二天作业</title>
 </head>
 <body>
     <script>
