--- a/日常/21.Date对象.html
+++ b/日常/21.Date对象.html
@@ -10,10 +10,10 @@
     <!-- Date对象 js内置的对象 -->
     <script>
     var obj={
-        namme='zhangshan',
+        namme='张珊',
         age:14,
         say:function(){
-            alert('nihao')
+            alert('你好')
         }
     }
     //获取对象的属性 对象.xxx 静态的 小狗的颜色身高
